[[bin]]
name = 'cr_lib'
test = false

[dependencies]
assert_approx_eq = '1'
base64 = '0.13'
bio = '1'
csv = '1'
derive_more = '0.99'
docopt = '1'
file_diff = '1'
fxhash = '0.2'
hostname = '0.3'
lazy_static = '1'
log = '0.4'
ndarray-rand = '0.14'
num = '0.4'
rand_chacha = '0.3'
sha2 = '0.10'
slice-group-by = '0.3'
tempfile = '3'
thiserror = '1'

[dependencies.anyhow]
workspace = true

[dependencies.barcode]
path = '../barcode'

[dependencies.barcode_extensions]
path = '../barcode_extensions'

[dependencies.bazel_utils]
path = '../bazel_utils'

[dependencies.cr_bam]
path = '../cr_bam'

[dependencies.cr_h5]
path = '../cr_h5'

[dependencies.cr_types]
path = '../cr_types'

[dependencies.cr_websummary]
path = '../cr_websummary'

[dependencies.fastq_set]
workspace = true

[dependencies.flate2]
workspace = true

[dependencies.hdf5]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.json_report_derive]
path = '../json_report_derive'

[dependencies.libc]
workspace = true

[dependencies.martian]
workspace = true

[dependencies.martian-derive]
workspace = true

[dependencies.martian-filetypes]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.metric_derive]
path = '../metric_derive'

[dependencies.multi]
path = '../multi'

[dependencies.ndarray]
workspace = true

[dependencies.orbit]
branch = 'master'
git = 'https://github.com/10XGenomics/orbit'

[dependencies.ordered-float]
features = ['serde']
version = '3'

[dependencies.par_proc]
path = '../par_proc'

[dependencies.parameters_toml]
path = '../parameters_toml'

[dependencies.rand]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.regex]
default-features = false
features = ['std', 'perf']
version = '1'

[dependencies.rust-htslib]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.shardio]
workspace = true

[dependencies.stats]
path = '../stats'

[dependencies.strum]
workspace = true

[dependencies.strum_macros]
workspace = true

[dependencies.transcriptome]
path = '../transcriptome'

[dependencies.tx_annotation]
path = '../tx_annotation'

[dependencies.umi]
path = '../umi'

[dependencies.vdj_reference]
path = '../vdj_reference'

[dependencies.vdj_types]
workspace = true

[features]
default = ['tenx_source_available']
slow_tests = []
tenx_internal = []
tenx_source_available = []

[lib]
test = false

[package]
authors = ['10x Genomics']
default-run = 'cr_lib'
edition = '2021'
name = 'cr_lib'
publish = false
version = '0.1.0'

[package.metadata]
[package.metadata.cargo-machete]
ignored = ['heck']
