[dependencies]
csv = '1.2'
statrs = '>=0.12, <= 0.16'
thousands = '0.2'

[dependencies.anyhow]
workspace = true

[dependencies.cr_types]
path = '../cr_types'

[dependencies.hclust]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs'

[dependencies.itertools]
workspace = true

[dependencies.martian-filetypes]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.ndarray]
workspace = true

[dependencies.ordered-float]
features = ['serde']
version = '>=1.1.1, < 4'

[dependencies.plotly]
workspace = true

[dependencies.regex]
default-features = false
features = ['std', 'perf']
version = '1'

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.websummary_derive]
path = '../websummary_derive'

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'cr_websummary'
publish = false
version = '0.1.0'
