[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.cr_types]
path = '../cr_types'

[dependencies.csv]
workspace = true

[dependencies.hclust]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.martian-filetypes]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.ndarray]
workspace = true

[dependencies.ordered-float]
workspace = true

[dependencies.plotly]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.statrs]
workspace = true

[dependencies.strum]
workspace = true

[dependencies.tenx-websummary]
features = ['derive']
workspace = true

[dependencies.thousands]
workspace = true

[dependencies.toml]
workspace = true

[dependencies.vdj_reference]
path = '../vdj_reference'

[dependencies.websummary_derive]
path = '../websummary_derive'

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2024'
name = 'cr_websummary'
publish = false
version = '0.1.0'
