[[bin]]
name = 'cellranger'
test = false

[dependencies]
csv = '1'
dirs = '5'
hex = '0.4'
md5 = '0.7'
sha2 = '0.10'
shell-escape = '0.1.5'
tempfile = '3'
terminal_size = '0.3'
thiserror = '1'
tiff = '0.9.1'

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.cr_types]
path = '../cr_types'

[dependencies.fastq_set]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.libc]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.ordered-float]
features = ['serde']
version = '3'

[dependencies.regex]
default-features = false
features = ['std', 'perf']
version = '1'

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.vdj_reference]
path = '../vdj_reference'

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'cr_wrap'
publish = false
version = '0.1.0'
