[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.enclone]
path = '../enclone'

[dependencies.enclone_args]
path = '../enclone_args'

[dependencies.enclone_core]
path = '../enclone_core'

[dependencies.enclone_process]
path = '../enclone_process'

[dependencies.enclone_stuff]
path = '../enclone_stuff'

[dependencies.rayon]
workspace = true

[dependencies.vdj_ann]
path = '../vdj_ann'

[dependencies.vdj_types]
path = '../vdj_types'

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'enclone_ranger'
publish = false
version = '0.1.0'
