[dependencies]
[dependencies.amino]
path = '../amino'

[dependencies.anyhow]
workspace = true

[dependencies.enclone]
path = '../enclone'

[dependencies.enclone_args]
path = '../enclone_args'

[dependencies.enclone_core]
path = '../enclone_core'

[dependencies.enclone_process]
path = '../enclone_process'

[dependencies.equiv]
path = '../equiv'

[dependencies.io_utils]
path = '../io_utils'

[dependencies.itertools]
workspace = true

[dependencies.qd]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.stats_utils]
path = '../stats_utils'

[dependencies.string_utils]
path = '../string_utils'

[dependencies.vdj_ann]
path = '../vdj_ann'

[dependencies.vector_utils]
path = '../vector_utils'

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'enclone_stuff'
publish = false
version = '0.1.0'
