[dependencies]
numpy = '>=0.18'

[dependencies.anyhow]
workspace = true

[dependencies.barcode]
path = '../barcode'

[dependencies.cr_h5]
path = '../cr_h5'

[dependencies.cr_types]
path = '../cr_types'

[dependencies.diff-exp]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs.git'

[dependencies.itertools]
workspace = true

[dependencies.martian]
workspace = true

[dependencies.martian-filetypes]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.ndarray]
workspace = true

[dependencies.pyo3]
features = ['extension-module', 'abi3-py310']
version = '>=0.18.2'

[dependencies.serde_json]
workspace = true

[dependencies.sprs]
default-features = false
features = ['multi_thread']
version = '0.11'

[dependencies.sqz]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs.git'

[lib]
crate-type = ['staticlib']
name = 'fast_utils'
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'fast_utils'
publish = false
version = '0.1.0'
