[dependencies]
bincode = '1'
numpy = '0.19'

[dependencies.anyhow]
workspace = true

[dependencies.barcode]
path = '../barcode'

[dependencies.cr_h5]
path = '../cr_h5'

[dependencies.cr_types]
path = '../cr_types'

[dependencies.diff-exp]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs.git'

[dependencies.itertools]
workspace = true

[dependencies.martian]
workspace = true

[dependencies.martian-filetypes]
workspace = true

[dependencies.metric]
path = '../metric'

[dependencies.ndarray]
workspace = true

[dependencies.pyanyhow]
path = '../pyanyhow'

[dependencies.pyo3]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.sprs]
default-features = false
features = ['multi_thread']
version = '0.11'

[dependencies.sqz]
branch = 'main'
git = 'https://github.com/10XGenomics/scan-rs.git'

[lib]
crate-type = ['staticlib']
name = 'fast_utils'
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'fast_utils'
publish = false
version = '0.1.0'
