[dependencies]
[dependencies.anyhow]
workspace = true

[dependencies.bio]
workspace = true

[dependencies.bytes]
features = ['serde']
version = '1'

[dependencies.fastq]
workspace = true

[dependencies.flate2]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.lz4]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.serde]
workspace = true

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2024'
name = 'fastq_set'
publish = false
version = '0.1.0'
