[dependencies]
[dependencies.debruijn]
workspace = true

[dependencies.equiv]
path = '../equiv'

[dependencies.graph_simple]
path = '../graph_simple'

[dependencies.kmer_lookup]
path = '../kmer_lookup'

[dependencies.petgraph]
workspace = true

[dependencies.vector_utils]
path = '../vector_utils'

[lib]
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
name = 'hyperbase'
publish = false
version = '0.1.0'
