[dependencies]
[dependencies.debruijn]
workspace = true

[dependencies.equiv]
path = '../equiv'

[dependencies.graph_simple]
path = '../graph_simple'

[dependencies.kmer_lookup]
path = '../kmer_lookup'

[dependencies.petgraph]
workspace = true

[dependencies.vector_utils]
path = '../vector_utils'

[lib]
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2024'
name = 'hyperbase'
publish = false
version = '0.1.0'
