[dependencies]
[dependencies.ndarray]
workspace = true

[dependencies.ndarray-stats]
workspace = true

[dependencies.numpy]
workspace = true

[dependencies.pyo3]
workspace = true

[dependencies.statrs]
workspace = true

[lib]
crate-type = ['staticlib']
name = 'jibes_o3'
test = false

[lints]
workspace = true

[package]
authors = ['10x Genomics']
edition = '2024'
name = 'jibes_o3'
publish = false
version = '0.1.0'
