[dependencies]
[dependencies.itertools]
workspace = true

[dependencies.proc-macro2]
workspace = true

[dependencies.quote]
workspace = true

[dependencies.syn]
workspace = true

[lib]
proc-macro = true
test = false

[package]
authors = ['10x Genomics']
edition = '2021'
include = ['src/lib.rs']
name = 'json_report_derive'
publish = false
version = '0.1.0'
